--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,6 +3,7 @@ body{
   max-width: 375px;
   margin: auto;
   overflow: hidden;
+  box-shadow: 0 10px 40px -15px hsl(229, 23%, 23%);
 }
 hr{
   border-color:  hsl(0, 0%, 59%);
